Fix/merged issues (#25)
* refactor: move logo to out of container

* fix: add deleted desktop styles

* fix: add a little margin between password and details

* fix: update title to avoid repetition

* style: fix wrong capitalization of title

* chore: change login style to Auth file

* style: change margins to fit pixel perfect design

--- a/src/components/AuthLayout/AuthLayout.module.css
+++ b/src/components/AuthLayout/AuthLayout.module.css
@@ -36,7 +36,7 @@
     font-weight: 400;
     text-align: center;
     margin: 0;
-    margin-bottom: 3.4rem;
+    margin-bottom: 1.7rem;
 }
 
 .login-card--register-section {
@@ -133,5 +133,34 @@
     .login-card--social-media {
         margin-top: 2.6rem;
         gap: 2.4rem;
+    }
+}
+
+/* Styles for desktop size */
+@media (width >= 1200px) {
+    .login-container {
+        align-items: end;
+    }
+
+    .logo {
+        align-self: start;
+        width: 17.8rem;
+        margin-top: 2.5rem;
+        margin-left: 3rem;
+    }
+
+    .login-card {
+        min-width: 46.2rem;
+        min-height: 70.2rem;
+        margin-top: 8.6rem;
+        margin-right: 10rem;
+    }
+
+    .login-card--subtitle {
+        margin-bottom: 1.9rem;
+    }
+
+    .login-card--register-section {
+        margin-left: 0.4rem;
     }
 }
